--- a/hw-assignments/DAT19-HW1-Assignment.ipynb
+++ b/hw-assignments/DAT19-HW1-Assignment.ipynb
@@ -82,17 +82,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'numpy.ndarray'>\n",
+      "(891, 12)\n",
+      "\n",
+      "...\n",
+      "['891' '0' '3' 'Dooley, Mr. Patrick' 'male' '32' '0' '0' '370376' '7.75' ''\n",
+      " 'Q']\n"
+     ]
+    }
+   ],
    "source": [
     "# We'll use the csv module from the Python standard library to read each row of our input data file\n",
     "#   into a list that we then convert into a numpy array.\n",
     "\n",
     "import csv as csv\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "file_object = csv.reader(open('titanic.csv', 'rb'))\n",
     "header = file_object.next() #First, let's strip off the header\n",
@@ -107,9 +121,158 @@
     "print type(data)\n",
     "print data.shape\n",
     "\n",
-    "print data[:10,:]\n",
     "print '\\n' + '...'\n",
     "print data[-1,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>passenger_number</th>\n",
+       "      <th>survival_binary</th>\n",
+       "      <th>passenger_class</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>#siblings/spouses</th>\n",
+       "      <th>#parents/children</th>\n",
+       "      <th>ticket_number</th>\n",
+       "      <th>passenger_fare</th>\n",
+       "      <th>cabin</th>\n",
+       "      <th>port of embarkation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PassengerId</td>\n",
+       "      <td>Survived</td>\n",
+       "      <td>Pclass</td>\n",
+       "      <td>Name</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>Age</td>\n",
+       "      <td>SibSp</td>\n",
+       "      <td>Parch</td>\n",
+       "      <td>Ticket</td>\n",
+       "      <td>Fare</td>\n",
+       "      <td>Cabin</td>\n",
+       "      <td>Embarked</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.925</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  passenger_number survival_binary passenger_class  \\\n",
+       "0      PassengerId        Survived          Pclass   \n",
+       "1                1               0               3   \n",
+       "2                2               1               1   \n",
+       "3                3               1               3   \n",
+       "4                4               1               1   \n",
+       "\n",
+       "                                                name     sex  age  \\\n",
+       "0                                               Name     Sex  Age   \n",
+       "1                            Braund, Mr. Owen Harris    male   22   \n",
+       "2  Cumings, Mrs. John Bradley (Florence Briggs Th...  female   38   \n",
+       "3                             Heikkinen, Miss. Laina  female   26   \n",
+       "4       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   35   \n",
+       "\n",
+       "  #siblings/spouses #parents/children     ticket_number passenger_fare  cabin  \\\n",
+       "0             SibSp             Parch            Ticket           Fare  Cabin   \n",
+       "1                 1                 0         A/5 21171           7.25    NaN   \n",
+       "2                 1                 0          PC 17599        71.2833    C85   \n",
+       "3                 0                 0  STON/O2. 3101282          7.925    NaN   \n",
+       "4                 1                 0            113803           53.1   C123   \n",
+       "\n",
+       "  port of embarkation  \n",
+       "0            Embarked  \n",
+       "1                   S  \n",
+       "2                   C  \n",
+       "3                   S  \n",
+       "4                   S  "
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_names = ['passenger_number', 'survival_binary', 'passenger_class', 'name', 'sex', 'age', '#siblings/spouses', '#parents/children', 'ticket_number','passenger_fare', 'cabin', 'port of embarkation']\n",
+    "tidata = pd.read_csv('titanic.csv', header=None, names=col_names)\n",
+    "tidata.head()"
    ]
   },
   {
@@ -128,15 +291,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 891 passengers in our list.\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here for num_passengers. Uncomment the line below to format your answer.\n",
     "\n",
-    "#print 'There are ' + str(num_passengers) + ' passengers in our list.'"
+    "num_passengers = np.shape(data)[0]\n",
+    "\n",
+    "print 'There are ' + str(num_passengers) + ' passengers in our list.'"
    ]
   },
   {
@@ -148,21 +321,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'num_passengers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-e47162803965>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mnum_survived\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_survivors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0msurvival_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnum_survived\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnum_passengers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'Of '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_passengers\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' passengers, '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_survived\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' survived.'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'num_passengers' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#HINT: You may want to import another module here\n",
-    "\n",
-    "\n",
     "#Your code here to calculate num_survived and survival_rate. \n",
     "#Again, we've provided some code you can use to format your answer.\n",
     "\n",
+    "survivors1 = data[0::,1] == \"1\"\n",
+    "total_survivors = data[survivors1,1].astype(np.float)\n",
     "\n",
-    "#print 'Of ' + str(num_passengers) + ' passengers, ' + str(num_survived) + ' survived.'\n",
-    "#print 'The survival rate is ' + str(survival_rate) + ' or '+ str(\"{0:.0f}%\".format(survival_rate * 100))"
+    "num_survived = np.sum(total_survivors)\n",
+    "\n",
+    "survival_rate = num_survived / num_passengers\n",
+    "\n",
+    "print 'Of ' + str(num_passengers) + ' passengers, ' + str(num_survived) + ' survived.'\n",
+    "print 'The survival rate is ' + str(survival_rate) + ' or '+ str(\"{0:.0f}%\".format(survival_rate * 100))"
    ]
   },
   {
@@ -174,16 +363,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 306,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There were 577 male passengers onboard.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here to calculate num_males\n",
+    "# Your code here to calculate num_male\n",
     "\n",
+    "female_data = data[0::,4] == \"female\"\n",
+    "male_data = data[0::,4] == \"male\"\n",
     "\n",
-    "#print 'There were ' + str(num_males) + ' male passengers onboard.'"
+    "men = data[male_data, 1].astype(np.float)\n",
+    "\n",
+    "num_males = np.size(men)\n",
+    "\n",
+    "print 'There were ' + str(num_males) + ' male passengers onboard.'"
    ]
   },
   {
@@ -195,16 +398,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 302,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There were 314 female passengers onboard.\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here to calculate num_females\n",
     "\n",
+    "women = data[female_data, 1].astype(np.float)\n",
     "\n",
-    "#print 'There were ' + str(num_females) + ' female passengers onboard.'"
+    "num_females = np.size(women)\n",
+    "\n",
+    "print 'There were ' + str(num_females) + ' female passengers onboard.'"
    ]
   },
   {
@@ -216,17 +430,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 308,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The survival rate of male passengers was 18.89%\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here to calculate male_survival_rate\n",
     "\n",
+    "num_living_males = np.sum(men)\n",
     "\n",
+    "male_survival_rate = num_living_males / num_males\n",
     "\n",
-    "#print 'The survival rate of male passengers was ' + str(\"{0:.2f}%\".format(male_survival_rate * 100))"
+    "print 'The survival rate of male passengers was ' + str(\"{0:.2f}%\".format(male_survival_rate * 100))"
    ]
   },
   {
@@ -238,16 +462,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 310,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The survival rate of female passengers was 74.20%\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here to calculate female_survival_rate\n",
     "\n",
+    "num_living_females = np.sum(women)\n",
     "\n",
-    "#print 'The survival rate of female passengers was ' + str(\"{0:.2f}%\".format(female_survival_rate * 100))"
+    "female_survival_rate = num_living_females / num_females\n",
+    "\n",
+    "print 'The survival rate of female passengers was ' + str(\"{0:.2f}%\".format(female_survival_rate * 100))"
    ]
   },
   {
@@ -259,17 +494,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average age of all passengers onboard was 29.70\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here to calculate avg_age\n",
     "# HINT: This may be trickier than it first seems. Look at the age values in the raw data file.\n",
+    "with_age = data[0::,5] != \"\"\n",
+    "age = data[with_age,5].astype(np.float)\n",
+    "#print np.size(age)\n",
+    "avg_age = np.sum(age) / np.size(age)\n",
     "\n",
-    "\n",
-    "#print 'The average age of all passengers onboard was ' + str(\"{0:.2f}\".format(avg_age))"
+    "print 'The average age of all passengers onboard was ' + str(\"{0:.2f}\".format(avg_age))"
    ]
   },
   {
@@ -281,16 +527,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average of age of passengers who survived was 28.34\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here to calculate avg_age_survived\n",
     "\n",
+    "lll = []\n",
+    "avgsurvage = data[survivors1, 5]\n",
     "\n",
-    "#print 'The average of age of passengers who survived was ' + str(\"{0:.2f}\".format(avg_age_survived))"
+    "avgsurvnoage = data[survivors1,5] != \"\"\n",
+    "\n",
+    "for nums in avgsurvage:\n",
+    "    if nums != \"\":\n",
+    "        lll.append(nums.astype(np.float))\n",
+    "\n",
+    "#print avgsurvage        \n",
+    "#print np.sum(lll)\n",
+    "#avgsurvnoage11 = data[avgsurvnoage,5].astype(int)\n",
+    "#print avgsurvnoage11\n",
+    "#print data[avgsurvnoage, 5]\n",
+    "#print np.size(avgsurvage) #number of survivors\n",
+    "#print np.sum(avgsurvnoage) #number of survivors with age stats\n",
+    "\n",
+    "avg_age_survived = sum(lll) / np.sum(avgsurvnoage) \n",
+    "\n",
+    "print 'The average of age of passengers who survived was ' + str(\"{0:.2f}\".format(avg_age_survived))"
    ]
   },
   {
@@ -302,16 +574,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average of age of passengers who did not survive was 30.63\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here to calculate avg_age_not_survive\n",
+    "fff = []\n",
+    "notsurvivors1 = data[0::,1] == \"0\"\n",
+    "avgnotsurvage = data[notsurvivors1, 5]\n",
+    "avgnotsurvnoage = data[notsurvivors1, 5] != \"\"\n",
     "\n",
+    "np.size(avgnotsurvage) #number of not survivors\n",
+    "np.sum(avgnotsurvnoage) #number of not survivors with age stats\n",
     "\n",
-    "#print 'The average of age of passengers who did not survive was ' + str(\"{0:.2f}\".format(avg_age_not_survive))"
+    "#print avgnotsurvage\n",
+    "#fff = fff.astype(int)\n",
+    "for nums in avgnotsurvage:\n",
+    "    if nums != \"\":\n",
+    "        fff.append(nums.astype(np.float))\n",
+    "#print type(fff[1])\n",
+    "#print fff\n",
+    "total_years = sum(fff)\n",
+    "\n",
+    "avg_age_not_survive = sum(fff) / np.sum(avgnotsurvnoage)\n",
+    "\n",
+    "print 'The average of age of passengers who did not survive was ' + str(\"{0:.2f}\".format(avg_age_not_survive))"
    ]
   },
   {
@@ -327,7 +624,10 @@
     "collapsed": true
    },
    "source": [
-    "_Your answer here as markdown_"
+    "* By itself, age is not a good predictor of survival\n",
+    "* Gender is a good predictor of survival\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -339,14 +639,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216\n",
+      "184\n",
+      "491\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "# You do not need to format the output nicely like we did for the questions above.\n",
+    "class1 = data[0::,2] == \"1\"\n",
+    "class2 = data[0::,2] == \"2\"\n",
+    "class3 = data[0::,2] == \"3\"\n",
+    "\n",
+    "print np.size(data[class1,0])\n",
+    "print np.size(data[class2,0])\n",
+    "print np.size(data[class3,0])\n",
     "\n"
    ]
   },
@@ -359,17 +676,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.62962962963\n",
+      "0.472826086957\n",
+      "0.242362525458\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "# HINT: Averaging of the 1's and 0's in the \"Survived\" column will give a survival rate.\n",
     "# We want the survival rate for each passenger class.\n",
     "# You do not need to format the output nicely.\n",
-    "\n"
+    "\n",
+    "class1survivors = data[class1, 1].astype(int)\n",
+    "print np.mean(class1survivors)\n",
+    "class2survivors = data[class2, 1].astype(int)\n",
+    "print np.mean(class2survivors)\n",
+    "class3survivors = data[class3, 1].astype(int)\n",
+    "print np.mean(class3survivors)"
    ]
   },
   {
@@ -385,7 +718,7 @@
     "collapsed": true
    },
    "source": [
-    "_Your answer here as markdown_"
+    "Male vs. female is still the best indicator of survival."
    ]
   },
   {
@@ -401,7 +734,7 @@
     "collapsed": true
    },
    "source": [
-    "_Your answer here as markdown_"
+    "Class and Male vs. Female are the best indicators of survival that we've explored and probably have a fair amount of predictive power. Siblings/spouses and parents/children would also be interesting too incorporate into a model that predicts survival, as these people would probably work together."
    ]
   }
  ],
@@ -421,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
